examples/test/testpolicy14723.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14723
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key31: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value34
          key34: value44
      podSelector:
        matchLabels:
          key39: value8
          key14: value41
          key47: value23
